kubernetes-playground/ingress/ingress-definition.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "pandatech.pe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-clusterip
            port: 
              number: 80
  - host: "vote.pandatech.pe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote
            port: 
              number: 5000
  - host: "result.pandatech.pe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port: 
              number: 5001
